--- a/MyELearningProject/Views/Category/Index.cshtml
+++ b/MyELearningProject/Views/Category/Index.cshtml
@@ -1,8 +1,36 @@
-﻿
+﻿@model List<MyELearningProject.DAL.Entites.Category>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/AdminLayout/Index.cshtml";
 }
 
-<h2>Index</h2>
+<div class="row">
+    <div class="col-12">
+        <div class="card">
+            <div class="card-block">
+                Kategori Listesi
+                <br />
+                <table class="table table-bordered">
+                    <tr>
+                        <th>#</th>
+                        <th>Kategori Adı</th>
+                        <th>Sil</th>
+                        <th>Güncelle</th>
+                    </tr>
+                    @foreach (var item in Model)
+                    {
+                        <tr>
+                            <td>@item.CategorId</td>
+                            <td>@item.CategoryName</td>
+                            <td><a href="/Category/DeleteCategory/@item.CategorId" class="btn btn-outline-danger">Sil</a></td>
+                            <td><a href="/Category/UpdateCategory/@item.CategorId" class="btn btn-outline-success">Güncelle</a></td>
+                            <td></td>
+                        </tr>
+                    }
+                </table>
+                <a href="/Category/AddCategory" class="btn btn-outline-primary">Yeni Kategori Girişi</a>
+            </div>
+        </div>
+    </div>
+</div>
 
