--- a/MyELearningProject/Views/Instructor/UpdateInstructor.cshtml
+++ b/MyELearningProject/Views/Instructor/UpdateInstructor.cshtml
@@ -8,7 +8,7 @@
 
 <form method="post">
     <br />
-    <input type="hidden" value=@Model.InstructorId name="InstructorId" />
+    <input type="hidden" value="@Model.InstructorId" name="InstructorId" />
     <label>Eğitmen Adı</label>
     <input type="text"  value="@Model.Name" name="Name" class="form-control" />
     <br /> <br />
