--- a/MyELearningProject/Views/AdminLayout/PartialRowPageTitle.cshtml
+++ b/MyELearningProject/Views/AdminLayout/PartialRowPageTitle.cshtml
@@ -1,10 +1,20 @@
-﻿<div class="row page-titles">
+﻿@{
+    var breadcrumb = ViewBag.Breadcrumb as List<MyELearningProject.DAL.Entites.BreadcrumbItem>;
+}
+<div class="row page-titles">
     <div class="col-md-5 col-8 align-self-center">
         <h3 class="text-themecolor m-b-0 m-t-0">Dashboard</h3>
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="javascript:void(0)">Ana Sayfa</a></li>
-            <li class="breadcrumb-item active">Dashboard</li>
+            @foreach (var item in breadcrumb)
+            {
+              
+                
+                    <li class="breadcrumb-item">  <a href="@item.Url">@item.Text</a></li>
+                
+              
+            }
         </ol>
+
     </div>
     <div class="col-md-7 col-4 align-self-center">
         <a href="#" class="btn waves-effect waves-light btn-danger pull-right hidden-sm-down">Raporları İndir</a>
