--- a/MyELearningProject/Views/AdminLayout/PartialSidebar.cshtml
+++ b/MyELearningProject/Views/AdminLayout/PartialSidebar.cshtml
@@ -17,10 +17,10 @@
                     <a class="waves-effect waves-dark" href="/Instructor/Index" aria-expanded="false"><i class="mdi mdi-school"></i><span class="hide-menu">Eğitmenler</span></a>
                 </li>
                 <li>
-                    <a class="waves-effect waves-dark" href="map-google.html" aria-expanded="false"><i class="mdi mdi-earth"></i><span class="hide-menu">Google Map</span></a>
+                    <a class="waves-effect waves-dark" href="map-google.html" aria-expanded="false"><i class="mdi mdi-earth"></i><span class="hide-menu">Googl</span></a>
                 </li>
                 <li>
-                    <a class="waves-effect waves-dark" href="pages-blank.html" aria-expanded="false"><i class="mdi mdi-book-open-variant"></i><span class="hide-menu">Blank Page</span></a>
+                    <a class="waves-effect waves-dark" href="/Course/Index" aria-expanded="false"><i class="mdi mdi-book-open-variant"></i><span class="hide-menu">Kurslar</span></a>
                 </li>
                 <li>
                     <a class="waves-effect waves-dark" href="pages-error-404.html" aria-expanded="false"><i class="mdi mdi-help-circle"></i><span class="hide-menu">Error 404</span></a>
