--- a/MyELearningProject/Views/Category/Index.cshtml
+++ b/MyELearningProject/Views/Category/Index.cshtml
@@ -10,24 +10,34 @@
             <div class="card-block">
                 Kategori Listesi
                 <br />
-                <table class="table table-bordered">
-                    <tr>
-                        <th>#</th>
-                        <th>Kategori Adı</th>
-                        <th>Sil</th>
-                        <th>Güncelle</th>
-                    </tr>
-                    @foreach (var item in Model)
-                    {
+                @if (Model.Count == 0)
+                {
+                    <div class="alert alert-danger" role="alert">
+                        Hiçbir Veri Bulunamadı
+                    </div>
+                }
+                else
+                {
+                    <table class="table table-bordered">
                         <tr>
-                            <td>@item.CategorId</td>
-                            <td>@item.CategoryName</td>
-                            <td><a href="/Category/DeleteCategory/@item.CategorId" class="btn btn-outline-danger">Sil</a></td>
-                            <td><a href="/Category/UpdateCategory/@item.CategorId" class="btn btn-outline-success">Güncelle</a></td>
-                            <td></td>
+                            <th>#</th>
+                            <th>Kategori Adı</th>
+                            <th>Sil</th>
+                            <th>Güncelle</th>
                         </tr>
-                    }
-                </table>
+                        @foreach (var item in Model)
+                        {
+                            <tr>
+                                <td>@item.CategoryId</td>
+                                <td>@item.CategoryName</td>
+                                <td><a href="/Category/DeleteCategory/@item.CategoryId" class="btn btn-outline-danger">Sil</a></td>
+                                <td><a href="/Category/UpdateCategory/@item.CategoryId" class="btn btn-outline-success">Güncelle</a></td>
+                                <td></td>
+                            </tr>
+                        }
+                    </table>
+                }
+
                 <a href="/Category/AddCategory" class="btn btn-outline-primary">Yeni Kategori Girişi</a>
             </div>
         </div>
