--- a/MyELearningProject/Views/Course/Index.cshtml
+++ b/MyELearningProject/Views/Course/Index.cshtml
@@ -12,29 +12,39 @@
             <div class="card-block">
                 Kurs Listesi
                 <br />
-                <table class="table table-bordered">
-                    <tr>
-                        <th>#</th>
-                        <th>Kurs Adı</th>
-                        <th>Kategori Adı</th>
-                        <th>Eğitmen Adı</th>
-                        <th>Sil</th>
-                        <th>Güncelle</th>
-                    </tr>
-                    @foreach (var item in Model)
-                    {
+                @if (Model.Count == 0)
+                {
+                    <div class="alert alert-danger" role="alert">
+                        Hiçbir Veri Bulunamadı
+                    </div>
+                }
+                else
+                {
+                    <table class="table table-bordered">
                         <tr>
-                            <td>@item.CourseId</td>
-                            <td>@item.Title</td>
-                            <td>@item.Category.CategoryName</td>
-                            <td>@item.Instructor.Name</td>
-                            <td><a href="/Course/DeleteCourse/@item.CourseId" class="btn btn-outline-danger">Sil</a></td>
-                            <td><a href="/Course/UpdateCourse/@item.CourseId" class="btn btn-outline-success">Güncelle</a></td>
-                            <td></td>
+                            <th>#</th>
+                            <th>Kurs Adı</th>
+                            <th>Kategori Adı</th>
+                            <th>Eğitmen Adı</th>
+                            <th>Sil</th>
+                            <th>Güncelle</th>
                         </tr>
-                    }
-                </table>
-                <a href="/Course/AddCourse" class="btn btn-outline-primary">Yeni Kurs Girişi</a>
+                        @foreach (var item in Model)
+                        {
+                            <tr>
+                                <td>@item.CourseId</td>
+                                <td>@item.Title</td>
+                                <td>@item.Category.CategoryName</td>
+                                <td>@item.Instructor.Name</td>
+                                <td><a href="/Course/DeleteCourse/@item.CourseId" class="btn btn-outline-danger">Sil</a></td>
+                                <td><a href="/Course/UpdateCourse/@item.CourseId" class="btn btn-outline-success">Güncelle</a></td>
+                                <td></td>
+                            </tr>
+                        }
+                    </table>
+                }
+
+                <a href="/Course/CreateCourse" class="btn btn-outline-primary">Yeni Kurs Girişi</a>
             </div>
         </div>
     </div>
