--- a/MyELearningProject/Views/Instructor/Index.cshtml
+++ b/MyELearningProject/Views/Instructor/Index.cshtml
@@ -12,29 +12,39 @@
             <div class="card-block">
                 Eğitmen Listesi
                 <br />
-                <table class="table table-bordered">
-                    <tr>
-                        <th>#</th>
-                        <th>Görsel</th>
-                        <th>Eğitmen Adı</th>
-                        <th>Sil</th>
-                        <th>Güncelle</th>
-                        <th>Kurslar</th>
-                        <th>Sitede Gör</th>
-                    </tr>
-                    @foreach (var item in Model)
-                    {
+                @if (Model.Count == 0)
+                {
+                    <div class="alert alert-danger" role="alert">
+                        Hiçbir Veri Bulunamadı
+                    </div>
+                }
+                else
+                {
+                    <table class="table table-bordered">
                         <tr>
-                            <td>@item.InstructorId</td>
-                            <td><img src="@item.ImageUrl" style="height:50px;width:60px;border-radius:50%" /></td>
-                            <td>@item.Name @item.Surname</td>
-                            <td><a href="/Instructor/DeleteInstructor/@item.InstructorId" class="btn btn-outline-danger">Sil</a></td>
-                            <td><a href="/Instructor/UpdateInstructor/@item.InstructorId" class="btn btn-outline-success">Güncelle</a></td>
-                            <td><a href="/Instructor/#/@item.InstructorId" class="btn btn-outline-warning">Kurslar</a></td>
-                            <td><a href="/Instructor/#/@item.InstructorId" class="btn btn-outline-info">Sitede gör</a></td>
+                            <th>#</th>
+                            <th>Görsel</th>
+                            <th>Eğitmen Adı</th>
+                            <th>Sil</th>
+                            <th>Güncelle</th>
+                            <th>Kurslar</th>k
+                            <th>Sitede Gör</th>
                         </tr>
-                    }
-                </table>
+                        @foreach (var item in Model)
+                        {
+                            <tr>
+                                <td>@item.InstructorId</td>
+                                <td><img src="@item.ImageUrl" style="height:50px;width:60px;border-radius:50%" /></td>
+                                <td>@item.Name @item.Surname</td>
+                                <td><a href="/Instructor/DeleteInstructor/@item.InstructorId" class="btn btn-outline-danger">Sil</a></td>
+                                <td><a href="/Instructor/UpdateInstructor/@item.InstructorId" class="btn btn-outline-success">Güncelle</a></td>
+                                <td><a href="/Instructor/#/@item.InstructorId" class="btn btn-outline-warning">Kurslar</a></td>
+                                <td><a href="/Instructor/#/@item.InstructorId" class="btn btn-outline-info">Sitede gör</a></td>
+                            </tr>
+                        }
+                    </table>
+                }
+
                 <a href="/Instructor/AddInstructor" class="btn btn-outline-primary">Yeni eğitmen Girişi</a>
             </div>
         </div>
