--- a/MyELearningProject/Views/Student/UpdateStudent.cshtml
+++ b/MyELearningProject/Views/Student/UpdateStudent.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/AdminLayout/Index.cshtml";
 }
 
-<h2>UpdateStudent</h2>
+<h2>Öğrenci Güncelleme Sayfası</h2>
 
 <form method="post">
     <br />
