--- a/MyELearningProject/Views/Category/UpdateCategory.cshtml
+++ b/MyELearningProject/Views/Category/UpdateCategory.cshtml
@@ -8,7 +8,7 @@
 
 <form method="post">
     <label>Kategori ID</label>
-    @Html.TextBoxFor(x => x.CategorId, new { @class = "form-control" })
+    @Html.TextBoxFor(x => x.CategoryId, new { @class = "form-control" })
     <br />
     <label>Kategori Adı</label>
     @Html.TextBoxFor(x => x.CategoryName, new { @class = "form-control" })
