--- a/MyELearningProject/Views/Instructor/AddInstructor.cshtml
+++ b/MyELearningProject/Views/Instructor/AddInstructor.cshtml
@@ -14,7 +14,7 @@
     <label>Eğitmen Soyadı</label>
     <input type="text" name="Surname" class="form-control" />
     <br /> <br />
-    <label>Eğitmen Adı</label>
+    <label>Eğitmen Görseli</label>
     <input type="text" name="ImageUrl" class="form-control" />
     <br /> <br />
     <button class="btn btn-primary">Eğitmeni Kaydet</button>
