--- a/MyELearningProject/Views/AdminLayout/PartialSidebar.cshtml
+++ b/MyELearningProject/Views/AdminLayout/PartialSidebar.cshtml
@@ -11,19 +11,19 @@
                     <a class="waves-effect waves-dark" href="pages-profile.html" aria-expanded="false"><i class="mdi mdi-account-check"></i><span class="hide-menu">Profilim</span></a>
                 </li>
                 <li>
-                    <a class="waves-effect waves-dark" href="/Category/Index" aria-expanded="false"><i class="mdi mdi-table"></i><span class="hide-menu">Kategoriler</span></a>
+                    <a class="waves-effect waves-dark" href="/Category/Index" aria-expanded="false"><i class="mdi mdi-apps"></i><span class="hide-menu">Kategoriler</span></a>
                 </li>
                 <li>
                     <a class="waves-effect waves-dark" href="/Instructor/Index" aria-expanded="false"><i class="mdi mdi-school"></i><span class="hide-menu">Eğitmenler</span></a>
                 </li>
                 <li>
-                    <a class="waves-effect waves-dark" href="map-google.html" aria-expanded="false"><i class="mdi mdi-earth"></i><span class="hide-menu">Googl</span></a>
+                    <a class="waves-effect waves-dark" href="/Student/Index" aria-expanded="false"><i class="mdi mdi-account-multiple-outline"></i><span class="hide-menu">Öğrenciler</span></a>
                 </li>
                 <li>
-                    <a class="waves-effect waves-dark" href="/Course/Index" aria-expanded="false"><i class="mdi mdi-book-open-variant"></i><span class="hide-menu">Kurslar</span></a>
+                    <a class="waves-effect waves-dark" href="/Course/Index" aria-expanded="false"><i class="mdi mdi-bank"></i><span class="hide-menu">Kurslar</span></a>
                 </li>
                 <li>
-                    <a class="waves-effect waves-dark" href="pages-error-404.html" aria-expanded="false"><i class="mdi mdi-help-circle"></i><span class="hide-menu">Error 404</span></a>
+                    <a class="waves-effect waves-dark" href="/Testimonial/Index" aria-expanded="false"><i class="mdi mdi-account-star"></i><span class="hide-menu">Referanslar</span></a>
                 </li>
             </ul>
             <div class="text-center m-t-30">
