--- a/MyELearningProject/Views/Instructor/UpdateInstructor.cshtml
+++ b/MyELearningProject/Views/Instructor/UpdateInstructor.cshtml
@@ -15,7 +15,7 @@
     <label>Eğitmen Soyadı</label>
     <input type="text"  value="@Model.Surname"name="Surname" class="form-control" />
     <br /> <br />
-    <label>Eğitmen Adı</label>
+    <label>Eğitmen Görseli</label>
     <input type="text"  value="@Model.ImageUrl" name="ImageUrl" class="form-control" />
     <br /> <br />
     <button class="btn btn-primary">Eğitmeni Güncelle</button>
