--- a/MyELearningProject/Views/CarousellFeature/AddCarousellFeature.cshtml
+++ b/MyELearningProject/Views/CarousellFeature/AddCarousellFeature.cshtml
@@ -13,6 +13,9 @@
     <label>Hakkımıza Alt Başlığını Giriniz</label>
     @Html.TextBoxFor(x => x.Title2, new { @class = "form-control" })
     <br />  <br />
+    <label>Resim Yolunu Giriniz</label>
+    @Html.TextBoxFor(x => x.ImageUrl, new { @class = "form-control" })
+    <br />  <br />
     <label>Hakkımızda Açıklamasını Giriniz</label>
     @Html.TextAreaFor(x => x.Description, new { @class = "form-control", @rows = 5 })
     <br />  <br />
