--- a/MyELearningProject/Views/CarousellFeature/Index.cshtml
+++ b/MyELearningProject/Views/CarousellFeature/Index.cshtml
@@ -25,6 +25,7 @@
                             <th>#</th>
                             <th> Başlığı</th>
                             <th> Alt Başlığı</th>
+                            <th> Resim yolu</th>
                             <th> Açıklaması</th>
                             <th>Sil</th>
                             <th>Güncelle</th>
@@ -35,6 +36,7 @@
                                 <td>@item.CarousellFeatureId</td>
                                 <td>@item.Title</td>
                                 <td>@item.Title2</td>
+                                <td>@item.ImageUrl</td>
                                 <td>@item.Description</td>
                                 <td><a href="/CarousellFeature/DeleteCarousellFeature/@item.CarousellFeatureId" class="btn btn-outline-danger">Sil</a></td>
                                 <td><a href="/CarousellFeature/UpdateCarousellFeature/@item.CarousellFeatureId" class="btn btn-outline-success">Güncelle</a></td>
