--- a/MyELearningProject/Views/Default/Index.cshtml
+++ b/MyELearningProject/Views/Default/Index.cshtml
@@ -6,3 +6,10 @@
 
 @Html.Action("PartialFeatureCarousell","Default")
 
+@Html.Action("PartialServices");
+
+@Html.Action("PartialAboutUs")
+
+@Html.Action("PartialAboutList")
+
+
