--- a/MyELearningProject/Views/Category/AddCategory.cshtml
+++ b/MyELearningProject/Views/Category/AddCategory.cshtml
@@ -10,6 +10,9 @@
     <label>Kategori Adını Giriniz</label>
     @Html.TextBoxFor(x => x.CategoryName, new { @class = "form-control" })
     <br />  <br />
+    <label>Kategori Adını Giriniz</label>
+    @Html.TextBoxFor(x => x.ImageUrl, new { @class = "form-control" })
+    <br />  <br />
     <button class="btn btn-primary">Kategoriyi Kaydet</button>
 </form>
 
