--- a/MyELearningProject/Views/Category/UpdateCategory.cshtml
+++ b/MyELearningProject/Views/Category/UpdateCategory.cshtml
@@ -13,6 +13,9 @@
     <label>Kategori Adı</label>
     @Html.TextBoxFor(x => x.CategoryName, new { @class = "form-control" })
     <br />
+    <label>Görsel Yolu</label>
+    @Html.TextBoxFor(x => x.ImageUrl, new { @class = "form-control" })
+    <br />
     <button class="btn btn-primary">Kategoriyi Güncelle</button>
 </form>
 
