--- a/MyELearningProject/Views/Default/Index.cshtml
+++ b/MyELearningProject/Views/Default/Index.cshtml
@@ -12,4 +12,11 @@
 
 @Html.Action("PartialAboutList")
 
+@Html.Action("PartialCategory")
+
+@Html.Action("PartialCourse")
+
+@Html.Action("PartialInstructor")
+
+@Html.Action("PartialTestimonial")
 
