--- a/MyELearningProject/Views/AdminLayout/PartialSidebar.cshtml
+++ b/MyELearningProject/Views/AdminLayout/PartialSidebar.cshtml
@@ -24,9 +24,15 @@
                 </li>
                 <li>
                     <a class="waves-effect waves-dark" href="/Testimonial/Index" aria-expanded="false"><i class="mdi mdi-account-star"></i><span class="hide-menu">Referanslar</span></a>
-                </li> 
+                </li>
                 <li>
                     <a class="waves-effect waves-dark" href="/Testimonial/Index" aria-expanded="false"><i class="mdi mdi-octagram"></i><span class="hide-menu">Hakkımızda Listesi</span></a>
+                </li>
+                <li>
+                    <a class="waves-effect waves-dark" href="/Contact/AdminContact" aria-expanded="false"><i class="mdi mdi-album"></i><span class="hide-menu">Gelen Mesajlar</span></a>
+                </li>
+                <li>
+                    <a class="waves-effect waves-dark" href="/InstructorAnalysis/Index" aria-expanded="false"><i class="mdi mdi-alarm"></i><span class="hide-menu">Eğitmen Analizi</span></a>
                 </li>
             </ul>
            
