--- a/MyELearningProject/Views/UILayout/PartialNavbar.cshtml
+++ b/MyELearningProject/Views/UILayout/PartialNavbar.cshtml
@@ -7,18 +7,11 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav ms-auto p-4 p-lg-0">
-            <a href="index.html" class="nav-item nav-link">Anasayfa</a>
-            <a href="about.html" class="nav-item nav-link">Hakkımızda</a>
-            <a href="courses.html" class="nav-item nav-link">Kurslar</a>
-            <div class="nav-item dropdown">
-                <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Sayfalar</a>
-                <div class="dropdown-menu fade-down m-0">
-                    <a href="team.html" class="dropdown-item">Biz</a>
-                    <a href="testimonial.html" class="dropdown-item active">Referanslar</a>
-                </div>
-            </div>
-            <a href="contact.html" class="nav-item nav-link">İletişim</a>
+            <a href="/Default/Index" class="nav-item nav-link">Anasayfa</a>
+            <a href="/UIAbout/Index" class="nav-item nav-link">Hakkımızda</a>
+            <a href="/UICourse/Index" class="nav-item nav-link">Kurslar</a>
+            <a href="/Contact/Index" class="nav-item nav-link">İletişim</a>
         </div>
-        <a href="" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">Join Now<i class="fa fa-arrow-right ms-3"></i></a>
+        <a href="" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">Giriş Yap<i class="fa fa-arrow-right ms-3"></i></a>
     </div>
 </nav>
