--- a/MyELearningProject/Views/InstructorAnalysis/InstructorPanelPartial.cshtml
+++ b/MyELearningProject/Views/InstructorAnalysis/InstructorPanelPartial.cshtml
@@ -6,7 +6,7 @@
 <div class="col-lg-4 col-xlg-3 col-md-5">
     <!-- Column -->
     <div class="card">
-        <img class="card-img-top" src="@item.CoverImage" alt="Card image cap">
+        <img class="card-img-top" src="~/Templates/material-lite-master/assets/images/background/profile-bg.jpg" alt="Card image cap">
         <div class="card-block little-profile text-center">
             <div class="pro-img"><img src="@item.ImageUrl" alt="user" /></div>
             <h3 class="m-b-0">@item.Name @item.Surname</h3>
@@ -14,10 +14,10 @@
             <a href="javascript:void(0)" class="m-t-10 waves-effect waves-dark btn btn-primary btn-md btn-rounded">Follow</a>
             <div class="row text-center m-t-20">
                 <div class="col-lg-4 col-md-4 m-t-20">
-                    <h3 class="m-b-0 font-light">ViewBag.courseCount</h3><small>Kurs sayısı</small>
+                    <h3 class="m-b-0 font-light">@ViewBag.courseCount</h3><small>Kurs sayısı</small>
                 </div>
                 <div class="col-lg-4 col-md-4 m-t-20">
-                    <h3 class="m-b-0 font-light">ViewBag.commentCount</h3><small>Yorum sayısı</small>
+                    <h3 class="m-b-0 font-light">@ViewBag.commentCount</h3><small>Yorum sayısı</small>
                 </div>
                 <div class="col-lg-4 col-md-4 m-t-20">
                     <h3 class="m-b-0 font-light">6035</h3><small>Following</small>
