--- a/MyELearningProject/Views/Login/PartialHead.cshtml
+++ b/MyELearningProject/Views/Login/PartialHead.cshtml
@@ -10,4 +10,5 @@
     <link rel="stylesheet" type="text/css" href="~/Templates/Login_v1/vendor/select2/select2.min.css">
     <link rel="stylesheet" type="text/css" href="~/Templates/Login_v1/css/util.css">
     <link rel="stylesheet" type="text/css" href="~/Templates/Login_v1/css/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
