--- a/MyELearningProject/Views/Login/Index.cshtml
+++ b/MyELearningProject/Views/Login/Index.cshtml
@@ -1,11 +1,12 @@
 ﻿
+
 @{
     Layout = null;
 }
 
 <!DOCTYPE html>
 <html lang="en">
-@Html.Action("PartialHead","Login")
+@Html.Action("PartialHead", "Login")
 <body>
     <div class="limiter">
         <div class="container-login100">
@@ -14,53 +15,39 @@
                     <img src="~/Templates/Login_v1/images/img-01.png" alt="IMG">
                 </div>
 
-                <form method="post" class="login100-form validate-form">
-                    <span class="login100-form-title">
-                        Öğrenci Girişi
-                    </span>
+                <div class="login100-form validate-form">
 
-                    <div class="wrap-input100 validate-input" data-validate="Valid email is required: ex@abc.xyz">
-                        <input class="input100" type="text" name="Email" placeholder="Email">
-                        <span class="focus-input100"></span>
-                        <span class="symbol-input100">
-                            <i class="fa fa-envelope" aria-hidden="true"></i>
-                        </span>
-                    </div>
-
-                    <div class="wrap-input100 validate-input" data-validate="Password is required">
-                        <input class="input100" type="password" name="Password" placeholder="Şifre">
-                        <span class="focus-input100"></span>
-                        <span class="symbol-input100">
-                            <i class="fa fa-lock" aria-hidden="true"></i>
-                        </span>
-                    </div>
 
                     <div class="container-login100-form-btn">
-                        <button class="login100-form-btn">
-                            Giriş Yap
-                        </button>
-                    </div>
-
-                    <div class="text-center p-t-12">
-                        <span class="txt1">
-                            Şifreni mi
-                        </span>
-                        <a class="txt2" href="#">
-                           unuttun ?
+                        <a href="/Login/AdminLogin" class="login100-form-btn">
+                            Admin Girişi
                         </a>
                     </div>
 
+                    <div class="container-login100-form-btn">
+                        <a href="/Login/StudentLogin" class="login100-form-btn">
+                            Öğrenci Girişi
+                        </a>
+                    </div>
+
+
+                    <div class="container-login100-form-btn">
+                        <a href="/Login/InstructorLogin" class="login100-form-btn">
+                            Eğitmen girişi
+                        </a>
+                    </div>
                     <div class="text-center p-t-136">
                         <a class="txt2" href="#">
                             Yeni Hesap Oluştur
                             <i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
                         </a>
                     </div>
-                </form>
+                </div>
             </div>
         </div>
     </div>
-    @Html.Action("PartialScript","Login")
+    @Html.Action("PartialScript", "Login")
 
+   
 </body>
 </html>
