--- a/MyELearningProject/Views/Login/PartialScript.cshtml
+++ b/MyELearningProject/Views/Login/PartialScript.cshtml
@@ -4,8 +4,14 @@
 <script src="~/Templates/Login_v1/vendor/select2/select2.min.js"></script>
 <script src="~/Templates/Login_v1/vendor/tilt/tilt.jquery.min.js"></script>
 <script>
-		$('.js-tilt').tilt({
-			scale: 1.1
-		})
+    $('.js-tilt').tilt({
+        scale: 1.1
+    })
 </script>
 <script src="~/Templates/Login_v1/js/main.js"></script>
+
+<script>
+    function goBack() {
+        window.history.back();
+    }
+</script>
