--- a/MyELearningProject/Views/Profile/MyCourseList.cshtml
+++ b/MyELearningProject/Views/Profile/MyCourseList.cshtml
@@ -1,10 +1,12 @@
-﻿﻿@{
+﻿@model List<MyELearningProject.DAL.Entites.Process>
+﻿@{
     Layout = null;
 }
 
 
 <!DOCTYPE html>
 <html lang="en">
+
 @Html.Action("PartialHead","Profile")
 
 <body class="fix-header fix-sidebar card-no-border">
@@ -59,7 +61,6 @@
                         <a href="/Default/Index/" class="btn waves-effect waves-light btn-warning hidden-md-down">Siteye Git</a>
                     </div>
                 </nav>
-                <!-- End Sidebar navigation -->
             </div>
             <div class="sidebar-footer">
                 <!-- item--><a href="" class="link" data-toggle="tooltip" title="Settings"><i class="ti-settings"></i></a>
@@ -83,76 +84,50 @@
                     </div>
                 </div>
                 <div class="row">
-                    <!-- Column -->
-                    <div class="col-lg-8 col-md-7">
-                        <div class="card">
-                            <div class="card-block">
-                                <div class="row">
-                                    <div class="col-12">
-                                        <div class="d-flex flex-wrap">
-                                            <div>
-                                                <h3 class="card-title">Öğrenme Oranı</h3>
-                                                <h6 class="card-subtitle">Günlük Ders İzleme Oranı</h6>
-                                            </div>
-                                            <div class="ml-auto">
-                                                <ul class="list-inline">
-                                                    <li>
-                                                        <h6 class="text-muted text-success"><i class="fa fa-circle font-10 m-r-10 "></i>Aktif</h6>
-                                                    </li>
-                                                    <li>
-                                                        <h6 class="text-muted  text-info"><i class="fa fa-circle font-10 m-r-10"></i>Pasif</h6>
-                                                    </li>
-                                                </ul>
+                    <div class="row g-4 justify-content-center">
+                        <div class="row g-4 justify-content-center">
+                            @foreach (var item in Model)
+                            {
+                                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+                                    <div class="course-item bg-light">
+
+                                        <div class="position-relative overflow-hidden">
+                                            <img class="img-fluid hoverable-image" src="@item.Course.ImageUrl" alt="">
+                                            <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
+                                                <a href="#" class="flex-shrink-0 btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Daha fazla</a>
                                             </div>
                                         </div>
-                                    </div>
-                                    <div class="col-12">
-                                        <div class="amp-pxl" style="height: 360px;"></div>
+                                        <div class="text-center p-4 pb-0">
+                                            <h3 class="mb-0">@item.Course.Price ₺</h3>
+                                            <div class="mb-3">
+                                                <small class="fa fa-star text-primary"></small>
+                                                <small class="fa fa-star text-primary"></small>
+                                                <small class="fa fa-star text-primary"></small>
+                                                <small class="fa fa-star text-primary"></small>
+                                                <small class="fa fa-star text-primary"></small>
+                                                <small>(123)</small>
+                                            </div>
+                                            <h5 class="mb-4">@item.Course.Title</h5>
+                                        </div>
+                                        <div class="d-flex border-top">
+                                            <small class="flex-fill text-center border-end py-2"><i class="fa fa-user-tie text-primary me-2"></i>@item.Course.Instructor.Name  @item.Course.Instructor.Surname</small>
+                                            <small class="flex-fill text-center border-end py-2"><i class="fa fa-clock text-primary me-2"></i>@item.Course.Duration s </small>
+                                            <small class="flex-fill text-center py-2"><i class="fa fa-user text-primary me-2"></i>30 Öğrenci</small>
+                                        </div>
+
+
                                     </div>
                                 </div>
-                            </div>
+                            }
+
+
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-5">
-                        <div class="card">
-                            <div class="card-block">
-                                <h3 class="card-title">Öğrenim Yüzdesi </h3>
-                                <h6 class="card-subtitle">Kurs İlerleme Yüzdeleri</h6>
-                                <div id="visitor" style="height:290px; width:100%;"></div>
-                            </div>
-                            <div>
-                                <hr class="m-t-0 m-b-0">
-                            </div>
-                            <div class="card-block text-center ">
-                                <ul class="list-inline m-b-0">
-                                    <li>
-                                        <h6 class="text-muted text-info"><i class="fa fa-circle font-10 m-r-10 "></i>Tamamlanan</h6>
-                                    </li>
-                                    <li>
-                                        <h6 class="text-muted  text-primary"><i class="fa fa-circle font-10 m-r-10"></i>Devam Eden</h6>
-                                    </li>
-                                    <li>
-                                        <h6 class="text-muted  text-success"><i class="fa fa-circle font-10 m-r-10"></i>%0 İlerleme</h6>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
+                    <!-- ============================================================== -->
+                    <footer class="footer"> © @DateTime.Now.Year Tüm Hakları Saklıdır. </footer>
                 </div>
-                <!-- Row -->
-                <!-- Row -->
-                <!-- ============================================================== -->
-                <!-- End PAge Content -->
-                <!-- ============================================================== -->
             </div>
-            <!-- ============================================================== -->
-            <footer class="footer"> © @DateTime.Now.Year Tüm Hakları Saklıdır. </footer>
-            <!-- ============================================================== -->
-            <!-- End footer -->
-            <!-- ============================================================== -->
-        </div>
-    </div>
-   @Html.Action("PartialScript","Profile")
+            @Html.Action("PartialScript", "Profile")
 </body>
 
 </html>
