--- a/MyELearningProject/Views/UILayout/PartialNavbar.cshtml
+++ b/MyELearningProject/Views/UILayout/PartialNavbar.cshtml
@@ -12,6 +12,6 @@
             <a href="/UICourse/Index" class="nav-item nav-link">Kurslar</a>
             <a href="/Contact/Index" class="nav-item nav-link">İletişim</a>
         </div>
-        <a href="" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">Giriş Yap<i class="fa fa-arrow-right ms-3"></i></a>
+        <a href="/Login/Index" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">Giriş Yap<i class="fa fa-arrow-right ms-3"></i></a>
     </div>
 </nav>
